--- a/.docker/server.properties
+++ b/.docker/server.properties
@@ -1,3 +1,4 @@
+database.type = postgresql
 #
 # server
 #
@@ -10,3 +11,15 @@ database.user = digdag
 database.password = digdag
 database.host = postgres
 database.database = digdag_db
+database.maximumPoolSize = 5
+database.minimumPoolSize = 1
+database.leakDetectionThreshold = 300
+
+#digdag.secret-encryption-key = 
+digdag.log.level = debug
+
+server.jmx.port = 9010
+
+log-server.type = local
+log-server.local.path = /opt/digdag/logs/tasks
+
