--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,24 @@
 version: '3.7'
 services:
   digdag_server:
-    image: szyn/docker-digdag:latest
+    image: yoyama/digdag:latest
     ports:
       - "65432:65432"
+      - "9010:9010"
     depends_on:
       - postgres
     volumes:
       - .:/src
       - .docker:/opt/etc/digdag
-    command: ["server", "-c", "/opt/etc/digdag/server.properties"]
+      - ./logs:/opt/digdag/logs
+    command: ["server", "-c", "/opt/etc/digdag/server.properties", "-L", "/opt/digdag/logs/server.log"]
   postgres:
-    image: postgres:11.1
+    image: postgres:9.5
     ports:
       - "5432:5432"
     environment:
       POSTGRES_DB: digdag_db
       POSTGRES_USER: digdag
       POSTGRES_PASSWORD: digdag
+    command: postgres -c logging_collector=on -c log_destination=stderr -c log_directory=/var/log/postgresql/
+
