Add secret encryption key and set loglevel to debug.

--- a/.docker/server.properties
+++ b/.docker/server.properties
@@ -13,9 +13,9 @@ database.host = postgres
 database.database = digdag_db
 database.maximumPoolSize = 5
 database.minimumPoolSize = 1
-database.leakDetectionThreshold = 300
+database.leakDetectionThreshold = 3000
 
-#digdag.secret-encryption-key = 
+digdag.secret-encryption-key = MDEyMzQ1Njc4OTAxMjM0NQ==
 digdag.log.level = debug
 
 server.jmx.port = 9010
