--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,5 +20,5 @@ services:
       POSTGRES_DB: digdag_db
       POSTGRES_USER: digdag
       POSTGRES_PASSWORD: digdag
-    command: postgres -c logging_collector=on -c log_destination=stderr -c log_directory=/var/log/postgresql/
+    command: postgres -c logging_collector=on -c log_destination=stderr -c log_directory=/var/log/postgresql/ -c 'max_connections=400'
 
